Bug 871390 - Update WebGL canvases async, not 2D ones r=mattwoodrow